# Vision-Transformer

./: .gitignore  README.md  app.py  pyproject.toml  requirements-torch.txt  requirements.txt
attention_mechanism/: attention-mechanism.ipynb
cfg/: cfg.yaml
notebooks/: Transformer.ipynb  ViT.ipynb  inference.ipynb  multi_head_workings.ipynb
src/: dataset.py  fastapi_app.py  main.py  model.py  predict.py  train.py  transformer_utils.py  transformer_utils_simple.py
